--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cryptex - Buy & Sell Digital Assets In The cryptex</title>
+  <title>Party Bug - Meme Coin Verified On Solana Blockchain</title>
 
   <!-- 
     - favicon
@@ -35,8 +35,8 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.svg" width="32" height="32" alt="Cryptex logo">
-        Cryptex
+        <img src="./assets/images/log.png" width="32" height="32" alt="Party Bug logo">
+        Party Bug
       </a>
 
       <nav class="navbar" data-navbar>
@@ -47,7 +47,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>Buy Crypto</a>
+            <a href="#" class="navbar-link" data-nav-link>buy party bug</a>
           </li>
 
           <li class="navbar-item">
@@ -55,7 +55,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>Sell Crypto</a>
+            <a href="#" class="navbar-link" data-nav-link>Community</a>
           </li>
 
           <li class="navbar-item">
@@ -63,7 +63,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>BITUSDT</a>
+            <a href="#" class="navbar-link" data-nav-link>BUG-USDCT</a>
           </li>
 
         </ul>
@@ -96,17 +96,17 @@
 
           <div class="hero-content">
 
-            <h1 class="h1 hero-title">Buy & Sell Digital Assets In The Cryptex</h1>
+            <h1 class="h1 hero-title">Buy & Sell Digital Assets In The Party Bug Coin ANd NFT Soon...</h1>
 
             <p class="hero-text">
-              Coin Cryptex is the easiest, safest, and fastest way to buy & sell crypto asset exchange.
+              
             </p>
 
             <a href="#" class="btn btn-primary">Get started now</a>
 
           </div>
 
-          <figure class="hero-banner">
+          <figure class="hero-banner.png">
             <img src="./assets/images/hero-banner.png" width="570" height="448" alt="hero banner" class="w-100">
           </figure>
 
@@ -765,7 +765,7 @@
 
           <div class="about-content">
 
-            <h2 class="h2 section-title">What Is Cryptex</h2>
+            <h2 class="h2 section-title">What Is Party Bug</h2>
 
             <p class="section-text">
               Experience a variety of trading on Bitcost. You can use various types of coin transactions such as Spot
@@ -902,15 +902,15 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./assets/images/logo.svg" width="50" height="50" alt="Cryptex logo">
-            Cryptex
+            <img src="./assets/images/log.png" width="50" height="50" alt="Party Bug logo">
+            Party Bug
           </a>
 
           <h2 class="footer-title">Let's talk! 🤙</h2>
 
           <a href="tel:+123456789101" class="footer-contact-link">+12 345 678 9101</a>
 
-          <a href="mailto:hello.cryptex@gmail.com" class="footer-contact-link">hello.cryptex@gmail.com</a>
+          <a href="mailto:hello.Party Bug@gmail.com" class="footer-contact-link">hello.Party Bug@gmail.com</a>
 
           <address class="footer-contact-link">
             Cecilia Chapman 711-2880 Nulla St. Mankato Mississippi 96522
@@ -957,7 +957,7 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Buy Crypto</a>
+            <a href="#" class="footer-link">buy party bug</a>
           </li>
 
           <li>
@@ -1049,7 +1049,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Cryptex All Rights Reserved by <a href="#" class="copyright-link">codewithsadee</a>
+          &copy; 2022 Party Bug All Rights Reserved by <a href="#" class="copyright-link">codewithsadee</a>
         </p>
 
         <ul class="social-list">
